--- a/website/Backend/package.json
+++ b/website/Backend/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@mapbox/polyline": "^1.2.1"
+  }
 }
