fetching user data from db

--- a/website/Backend/package.json
+++ b/website/Backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@mapbox/polyline": "^1.2.1"
+    "@mapbox/polyline": "^1.2.1",
+    "mongodb": "^6.20.0"
   }
 }
